# second-brain-agent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.yaml  example.env  extractors.py  htmlTemplates.py  install-systemd-services.sh  integration-test.sh  lib.py  mcp-server.sh  mcp_server.py  monitor.sh  pyproject.toml  qa.py  requirements.txt  run-server.sh  sba-md-service.sh  sba-txt-service.sh  second_brain_agent.py  service.sh  similarity.py  smart_connections.py  test_lib.py  test_mcp_server.py  transform.py  transform_md.py  transform_txt.py
.github/workflows/: pr.yml
chromadb/: __init__.py
