[project]
name = "second-brain-agent"
version = "0.7.0"
description = "Second Brain AI Agent"
authors = [
    {name = "Frederic Lepied", email = "flepied@gmail.com"}
]
license = "GPL-3.0"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "beautifulsoup4",
    "chromadb>=1.1.1",
    "huggingface-hub",
    "langchain",
    "langchain-community",
    "langchain-chroma>=0.2.5",
    "langchain-openai",
    "langchain-huggingface",
    "langchain-text-splitters",
    "openai",
    "pymupdf",
    "python-dotenv",
    "sentence-transformers",
    "tiktoken",
    "unstructured",
    "youtube-transcript-api",
    "yt-dlp",
    "pydub",
    "markdown",
    "pydantic>=2.5.3",
    "assemblyai>=0.17.0",
    "fastmcp",
]

[project.optional-dependencies]
dev = [
    "pyproject-pre-commit>=0.0.17",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pylint",
    "pre-commit",
]

[project.urls]
Repository = "https://github.com/flepied/second-brain-agent"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requires external services like vector database)",
    "unit: marks tests as unit tests (can run without external services)",
]
addopts = [
    "-v",
    "--strict-markers",
    "--disable-warnings",
]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
